--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
-setuptools>=20.3.1
-lockfile>=0.12.2
+attrs==16.3.0
+autobahn==0.17.1
+Automat==0.5.0
+cffi==1.9.1
+constantly==15.1.0
+cryptography==1.7.2
+enum34==1.1.6
+futures==3.0.5
+idna==2.2
+incremental==16.10.1
+ipaddress==1.0.18
+lockfile==0.12.2
+pyasn1==0.2.2
+pyasn1-modules==0.0.8
+pycparser==2.17
+pyOpenSSL==16.2.0
+service-identity==16.0.0
+six==1.10.0
+trollius==2.1
+Twisted==17.1.0
+txaio==2.6.1
+zope.interface==4.3.3
